# chat_webui

./: .gitignore  README.md  alembic.ini  implementation_plan.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: __init__.py  health.py  mock.py  runtime.py  spec.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/runtime/: __init__.py  manager.py
backend/app/schemas/: chat.py  models.py  runtime.py  system.py
backend/app/utils/: clock.py  file_ops.py
backend/fixtures/: chat_stream.json  models.json
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2025_08_11_0001_phase2_init.py
backend/openapi/: schema.yaml
backend/tests/: test_health.py  test_runtime.py
docs/: runtime_setup.md
frontend/: eslint.config.mjs  package-lock.json  package.json  prettier.config.mjs  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfigForm.tsx  MockResponsePanel.tsx  ModelList.tsx  StatusCard.tsx
frontend/src/lib/: api.ts
frontend/src/store/: chatConfig.ts
frontend/src/types/: api.ts
infra/: tasks.py
infra/runtime/: build_llamacpp_rocm.py  copy_runtime_pack.py
